feat: Implement paging for date range search.